Fix word wrapping for system message bubbles

--- a/client-demo/chat_widget.css
+++ b/client-demo/chat_widget.css
@@ -81,6 +81,7 @@ body {
 
 .system-message {
   background-color: limegreen;
+  word-wrap: anywhere;
 }
 
 /* Chat Form */
